# meridian-batch-platform

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: adr.md  ship.md
.claude/skills/dbt-model/: SKILL.md
.claude/skills/dbt-model/references/: model_template.sql
docs/: PORTFOLIO_BRIEF.md  STANDARDS.md  architecture.md
docs/adr/: 0001-record-architecture-decisions.md  0002-duckdb-as-warehouse.md  0003-dlt-ingestion.md  0004-dagster-orchestration.md  0005-elementary-data-quality.md  0006-iceberg-taste.md  0007-evidence-serving.md
ingestion/: __init__.py  iceberg_demo.py  iceberg_pipeline.py  meridian_source.py  pipeline.py
orchestration/: __init__.py  definitions.py
orchestration/assets/: __init__.py  ingest.py  quality.py  transform.py
serving/pages/: customers.md  data-quality.md  index.md  products.md
serving/sources/meridian/: connection.yaml  customers.sql  daily.sql  products.sql
src/project/: __init__.py
tests/: test_data_quality.py  test_dbt.py  test_domain.py  test_full_pipeline.py  test_iceberg.py  test_ingestion.py  test_orchestration.py  test_smoke.py
transform/: .edr_profiles.yml  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/models/marts/: _marts.yml  dim_customer.sql  dim_product.sql  exposures.yml  fct_order_items.sql  fct_orders.sql  fct_payments.sql  mart_marketplace_daily.sql
transform/models/staging/: _sources.yml  _staging.yml  stg_meridian__customers.sql  stg_meridian__order_items.sql  stg_meridian__orders.sql  stg_meridian__payments.sql  stg_meridian__products.sql
transform/tests/: assert_daily_gmv_non_negative.sql
