[project]
name = "meridian-project"
version = "0.1.0"
description = "A project in the Meridian data + AI platform portfolio"
requires-python = ">=3.12"
dependencies = [
    "meridian-core @ git+https://github.com/AndreFelippeVidal/meridian-core@v0.1.0",
    "duckdb>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project"]
