[project]
name = "meridian-batch-platform"
version = "0.1.0"
description = "Meridian P1 — complete modern data stack: dlt → DuckDB → dbt → Dagster → Evidence"
requires-python = ">=3.12"
dependencies = [
    "meridian-core @ git+https://github.com/AndreFelippeVidal/meridian-core@v0.2.0",
    "duckdb>=1.0",
    "dlt[duckdb]>=1.4",
    "dagster>=1.9",
    "dagster-dlt>=0.25",
    "dagster-webserver>=1.9",
    "dbt-core>=1.9",
    "dbt-duckdb>=1.9",
    "dagster-dbt>=0.25",
    "elementary-data[duckdb]>=0.16",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project"]
